--- a/client/src/components/Chat.css
+++ b/client/src/components/Chat.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     height: 100%; /* full height of parent div */
-    min-height: 500px;
+    max-height: 500px;
     width: 100%; /* full width of parent div */
     border: 1px solid #ccc;
     border-radius: 5px;
